# durable_django

./: README.md  pyproject.toml
core/: settings.py  urls.py
rules/: urls.py  views.py
